--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
-safe:        false
-auto:        false
+# safe:        false
+auto:        true
 server:      false
 server_port: 4000
+
+title: www.techfreak.net
 
 source:      .
 destination: ./_site
@@ -10,8 +12,7 @@ plugins:     ./_plugins
 future:      true
 lsi:         false
 pygments:    false
-markdown:    maruku
-permalink:   pretty
+permalink:   date
 
 maruku:
   use_tex:    false
