--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ server_port: 4000
 title: www.techfreak.net
 
 source:      .
-exclude:    ./vendor
+  
 destination: ./_site
 plugins:     ./_plugins
 
@@ -24,3 +24,10 @@ maruku:
 
 rdiscount:
   extensions: []
+
+exclude:
+- Rakefile
+- config.ru
+- Gemfile
+- Gemfile.lock
+- vendor
